tests/cases/errors/parser/stmt_fn5.vnm
fn main(spam, egg {
  let x = 0;
  while (x < 10) {
    print x; 
    x = x + 1;
  }
  return 0;
}

main();
